--- a/index.html
+++ b/index.html
@@ -6,14 +6,8 @@
         <main>
             <div class="container"></div>
         </main>
-        <div class="item-container">
-            <span class="emoji">🍕</span>
-            <div class="item-info">
-                <span class="title">Beer</span>
-                <span class="ingredients">pepperoni, mushrooms, mozarella</span>
-                <span class="price">14</span>
-            </div>
-            <button class="order-btn">+</button>
+        <div id="item-container">
+            
         </div>
 	<script src="index.js"></script>
     </body>
