--- a/index.html
+++ b/index.html
@@ -3,12 +3,16 @@
        <link rel="stylesheet" href="index.css">
     </head>
     <body>
-        <main>
-            <div class="container"></div>
-        </main>
-        <div id="item-container">
-            
-        </div>
+       <main class="container">
+            <header>
+                <h1>Jimmy's Diner</h1>
+                <h2>The best pizzas and burgers in town</h2>
+            </header>
+            <div id="items-info">
+
+            </div>
+       </main>
+
 	<script src="index.js"></script>
     </body>
 </html>
