--- a/index.html
+++ b/index.html
@@ -3,17 +3,10 @@
        <link rel="stylesheet" href="index.css">
     </head>
     <body>
-       <main class="container">
-            <header>
-                <h1>Jimmy's Diner</h1>
-                <h2>The best pizzas and burgers in town</h2>
-            </header>
-            <div id="items-info">
-
-            </div>
+       <main id="container">
        </main>
 
-	<script src="index.js"></script>
+	<script src="index.js" type="module"></script>
     </body>
 </html>
 
